--- a/casestudy-module/src/main/webapp/product/style.css
+++ b/casestudy-module/src/main/webapp/product/style.css
@@ -146,7 +146,7 @@
 }
 .home .img img{
     margin-top: 30px;
-    width: 100%;
+    width: 80%;
     height: 70%;
 }
 .home .content{
@@ -230,9 +230,9 @@
     margin-top: 100px;
 }
 #product-cards h1{
-    color: #ffc800;
+    color: #bcbab4;
     text-shadow: 1px 1px 1px black;
-    border-bottom: 2px solid #ffc800;
+    border-bottom: 2px solid #9e9c95;
 }
 #product-cards .card h3{
     font-size: 20px;
@@ -248,7 +248,7 @@
     font-size: 13px;
 }
 .checked{
-    color: #ffc800;
+    color: #1c1c1b;
 }
 #product-cards .card h2{
     font-size: 20px;
@@ -533,11 +533,12 @@
 
 /* footer */
 #footer{
+
     padding: 0 0 30px 0px;
     color: white;
     font-size: 14px;
     background-color: rgb(197, 193, 198);
-    margin-top: 100px;
+    margin-top: 300px;
 }
 #footer .footer-top{
     padding: 60px 0 30px 0;
